fix look of submit buttons on safari

--- a/titlegen/static/css/titlegen.css
+++ b/titlegen/static/css/titlegen.css
@@ -34,6 +34,7 @@ input {
 }
 
 button, input[type='button'], input[type='submit'] {
+    -webkit-appearance: none;
     background-color: #f6821f; 
     border: none;
     border-radius: 5px;
